# lambda-RLM

./: AGENTS.md  LICENSE  MANIFEST.IN  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
benchmarks/: benchmark.py
docs/: .gitignore  architecture.md  getting-started.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/api/: rlm.md
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/components/: Button.tsx  CodeBlock.tsx  Sidebar.tsx  Table.tsx  (+1 more)
examples/: compaction_example.py  compaction_history_retrieval_example.py  custom_tools_example.py  daytona_repl_example.py  depth_metadata_example.py  docker_repl_example.py  e2b_repl_example.py  lm_in_prime_repl.py  lm_in_repl.py  logger_example.py  modal_repl_example.py  prime_repl_example.py  quickstart.py  rlm_query_batched_example.py
rlm/: __init__.py  lambda_rlm.py
rlm/clients/: base_lm.py  litellm.py  openai.py
rlm/core/: comms_utils.py  lm_handler.py  rlm.py  types.py
rlm/environments/: __init__.py  base_env.py  daytona_repl.py  docker_repl.py  e2b_repl.py  local_repl.py  modal_repl.py  prime_repl.py
rlm/utils/: parsing.py  prompts.py
tests/: mock_lm.py  test_depth_metadata.py  test_e2e_depth.py  test_imports.py  test_lm_handler.py  test_local_repl.py  test_local_repl_persistent.py  test_multi_turn_integration.py  test_parsing.py  test_rlm_query.py  test_subcall.py  test_types.py
tests/clients/: portkey.py  test_gemini.py  test_timeout.py
tests/repl/: test_custom_tools.py  test_local_repl.py
visualizer/: package-lock.json  package.json
(+23 files in other folders)
